fix: double overflow in modalidades-container and top-10-container, free-education size fixed too

--- a/src/styles/free-education.css
+++ b/src/styles/free-education.css
@@ -13,6 +13,13 @@
     margin-bottom: 20px;
     color: #7FA325;
 }
+.free-education-text h2 {
+    font-size: 2.3em;
+}
+.free-education-text p {
+    margin-top: 40px;
+    font-size: 1.4em;
+}
 
 .cards-free-education {
     display: flex;
@@ -62,7 +69,6 @@
 
 .card-free-education button {
     background-color: #063c77;
-    border: none;
     border-radius: 70px;
     align-self: center;
     width: 150px;
