--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,6 @@
 
 #modalidades-container {
     display: flex;
-    overflow-x: auto;
     /* Permite a rolagem horizontal */
     scroll-behavior: smooth;
     /* Rola suavemente */
@@ -111,7 +110,6 @@
     scroll-behavior: smooth;
     overflow: hidden;
     /* Rola suavemente */
-    overflow-x: hidden;
 }
 
 #top-10-container::-webkit-scrollbar {
